--- a/app/views/news_messages/index.html.erb
+++ b/app/views/news_messages/index.html.erb
@@ -3,6 +3,7 @@
 
   <section>
     <%= link_to 'New News Message', new_news_message_path, :class => "button-input" %>
+    <%= link_to 'Tweets', tweets_path, :class => "button-input" %>
   </section>
   <%= link_to "Hide News Media", hide_all_media_path, method: :post, :class => "button-input" %>
 
