--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,9 @@
  * file per style scope.
  *
  *= require bootstrap
+ *= require mobile
  *= require games
+ *= require messages
  *= require_self
  *= require admin
  *= require splash
