Add stuff for mobile public relations dashboard.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require mobile
  *= require games
  *= require messages
+ *= require public_relations
  *= require_self
  *= require admin
  *= require print
