--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -15,6 +15,7 @@
     <nav class="sidebar">
       <ul class="menu">
         <li><%= link_to 'Dashboard', root_path , method: :get %></li>
+        <li><%= link_to 'Income', team_incomes_path, method: :get %></li>
         <li><%= link_to 'Messages', messages_path, method: :get %></li>
         <li>Tech Tree</li>
         <li>Log Out</li>
