--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -12,6 +12,19 @@
   min-height: 100%;
   padding-bottom: 0;
 
+  p {
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+  }
+
+  label {
+    margin-top: 10px;
+  }
+
+  textarea {
+    min-height: 85px;
+  }
+
   .page-title {
     margin-left: 60px;
     text-align: center;
