Save things before I ruin them all.

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -10,7 +10,7 @@
   font-size: 1.6rem;
   line-height: 2.2rem;
   min-height: 100%;
-  padding-bottom: 0;
+  padding: 0;
 
   p {
     font-size: 1.6rem;
@@ -18,7 +18,7 @@
   }
 
   label {
-    margin-top: 10px;
+    margin-top: 0px;
   }
 
   textarea {
@@ -26,14 +26,17 @@
   }
 
   .page-title {
-    margin-left: 60px;
+    background: #FFF;
+    margin-bottom: 30px;
+    padding-left: 60px;
+    padding-bottom: 10px;
     text-align: center;
   }
 
   .page-content {
     color: #444;
     flex: 1;
-    padding: 0 20px;
+    padding: 0;
     transition: all .3s;
   }
 
@@ -148,18 +151,5 @@
     margin: 10px 0;
     padding: 10px;
     position: relative;
-  }
-}
-
-
-@media (min-device-width: 780px) {
-  .mobile {
-    background-size: cover;
-  }
-}
-
-@media (orientation: portrait) {
-  .mobile {
-    background-size: cover;
   }
 }
