--- a/app/assets/stylesheets/public_relations.css.scss
+++ b/app/assets/stylesheets/public_relations.css.scss
@@ -1,45 +1,96 @@
+$darkblue: #003D6F;
+$headblue: #1077C3;
+
 .public_relations {
-  background: #FFF;
+  color: #000;
   display: block;
   margin: 0 auto;
   padding: 0;
   width: 80%;
 
-  .control-message {
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
+  .country-header, .tab, .footer {
+    background: #FFf;
+  //  background: rgba(255, 255, 255, 0.85);
+  }
+
+  h4 {
+    color: #000;
+    margin-bottom: 15px;
+
+    span {
+      color: $headblue;
+    }
+  }
+
+
+  .country-header {
+    border: 1px solid $darkblue;
+    display: flex;
+    margin-bottom: 50px;
     padding: 10px;
   }
 
+  .my-country {
+    display: flex;
+    flex: 1;
+
+    .flag {
+      flex: 0 0 120px;
+    }
+
+    .govt {
+      flex: 1;
+      font-weight: bold;
+      margin-top: 15px;
+
+      h4 {
+        color: $headblue;
+        font-weight: bold;
+        margin-top: 5px;
+      }
+    }
+
+    .flag img {
+      width: 100px;
+    }
+  }
+
+  .messages-container {
+    flex: 1;
+
+    .messages-header {
+      font-weight: bold;
+    }
+  }
+
+
+
   .turns {
-    border: 1px solid #ccc;
-    padding: 10px;
+    padding: 10px 0;
   }
 
   .tab-selection {
-    border-bottom: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    padding: 20px 10px 0 10px;
+    padding: 0 10px;
   }
 
   .tab-choice {
+    background: $darkblue;
+    color: #FFF;
     cursor: pointer;
     display: inline-block;
-    padding: 10px;
+    padding: 5px 10px;
 
     &.focused {
+      background: #FFF;
+      border: 1px solid $darkblue;
       border-bottom: 1px solid #FFF;
-      border-top: 1px solid #ccc;
-      border-left: 1px solid #ccc;
-      border-right: 1px solid #ccc;
+      color: #000;
       margin-bottom: -1px;
     }
   }
 
   .tab {
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
+    border: 1px solid $darkblue;
     padding: 10px;
   }
 
@@ -52,23 +103,44 @@
     display: flex;
     flex-wrap: wrap;
 
+    label {
+      display: block;
+      margin-bottom: 8px;
+    }
+
+    .amount {
+      flex: 0 0 90px;
+    }
+
+    .reason {
+      flex: 0 0 calc(100% - 100px);
+    }
+
     .half {
       flex: 1 0 50%;
+    }
 
-      &.header {
-        font-weight: bold;
-      }
+    .header {
+      font-weight: bold;
+    }
+  }
+
+  .news {
+    h4 {
+      margin: 0;
     }
   }
 
   .news-time {
     font-style: italic;
-    margin-top: 5px;
-    padding-bottom: 5px;
+    margin: 0;
+    padding: 0;
   }
 
   .footer {
-    border: 1px solid #ccc;
+    border: 1px solid $darkblue;
+    margin: 50px 0;
     padding: 10px;
+    text-align: center;
   }
 }
