Tweak things per conversations with Noam.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require mobile
  *= require games
  *= require messages
- *= require public_relations
+ *= require mobile_dashboard
  *= require_self
  *= require admin
  *= require splash
