--- a/app/views/messages/_messages_sidebar.html.erb
+++ b/app/views/messages/_messages_sidebar.html.erb
@@ -6,7 +6,7 @@
   </li>
 
   <li ng-repeat="conversation in myMessages | orderBy: '-updated_at'"
-      ng-class="{'active': isActive === conversation.id}"
+      ng-class="{'active': messageIsActive === conversation.id}"
       ng-click="selectConversation(conversation)"
       id="message_{{conversation.id}}">
     <img ng-src="assets/flags/{{conversation.conversation_partner}}.png" class="flag" />
