--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -14,7 +14,7 @@
     border: 1px solid #CCC;
     border-top: 0px;
     cursor: pointer;
-    margin: 0 0 0 10px;
+    margin: 0;
     padding: 5px 5px 5px 10px;
 
     &:first-child {
