--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -8,8 +8,8 @@
   background-repeat: no-repeat;
 
   display: flex;
-  font-size: 1.6rem;
-  line-height: 2.2rem;
+  font-size: 1.5rem;
+  line-height: 1.6;
   min-height: 100%;
   padding: 0;
 
@@ -39,104 +39,6 @@
     flex: 1;
     padding: 0;
     transition: all .3s;
-  }
-
-  .sidebar {
-    background: #444;
-    color: #eee;
-    height: 100%;
-    font-size: 1.6rem;
-    line-height: 2.2rem;
-    margin-left: -200px;
-    overflow: hidden;
-    padding-top: 6.5rem;
-    transition: all .3s;
-    width: 200px;
-
-    a {
-      color: #EEE;
-    }
-
-    a:hover {
-      background-color: transparent;
-      color: #EEE;
-    }
-
-    .menu {
-      list-style: none;
-      padding: 0;
-
-      li {
-        border-top: 1px solid darken(#444, 10%);
-        padding: 16px 32px;
-
-        &:last-child {
-          border-bottom: 1px solid darken(#444, 10%);
-        }
-      }
-    }
-  }
-
-  .hamburger-checkbox {
-    opacity: 0;
-    position: absolute;
-  }
-
-  .hamburger-label {
-    color: white;
-    cursor: pointer;
-    height: 30px;
-    left: 32px;
-    margin: 0;
-    position: absolute;
-    top: 24px;
-    width: 40px;
-  }
-
-  .hamburger-label span,
-  .hamburger-label span:before,
-  .hamburger-label span:after {
-    background: #444;
-    border-radius: 1px;
-    content: '';
-    cursor: pointer;
-    display: block;
-    height: 5px;
-    position: absolute;
-    top: 10px;
-    transition: all 500ms ease-in-out;
-    width: 35px;
-  }
-
-  .hamburger-label span:before {
-    top: -10px;
-  }
-
-  .hamburger-label span:after {
-    bottom: -10px;
-  }
-
-  .hamburger-checkbox:checked ~ .hamburger-label span {
-    background-color: transparent;
-  }
-
-  .hamburger-checkbox:checked ~ .hamburger-label span:before {
-    background-color: #fff;
-    top: 0;
-    transform: rotate(45deg);
-  }
-
-  .hamburger-checkbox:checked ~ .hamburger-label span:after {
-    background-color: #fff;
-    top: 0;
-    transform: rotate(-45deg);
-  }
-
-  .hamburger-checkbox:checked ~ .sidebar {
-    height: 100%;
-    margin-left: 0px;
-    transition: all 500ms ease-in-out;
-    width: 200px;
   }
 
   .button {
