Add permissions for roles. Clean up some JS.

--- a/app/views/mobile_dashboard/_header.html.erb
+++ b/app/views/mobile_dashboard/_header.html.erb
@@ -6,7 +6,7 @@
 <div class="my-country">
   <div class="flag"><img ng-src="assets/flags/{{myCountry}}.png" /></div>
   <div class="govt">Government of {{myCountry}}
-    <h4>{{myRole}}</h4>
+    <h4>{{getRoleName}}</h4>
   </div>
   <div class="role"><img ng-src="assets/flags/{{myCountry}}.png" /></div>
 </div>
