--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -19,25 +19,20 @@
         </div>
       <% end %>
     <% else %>
-    <h2>Welcome back, <%= current_user.email %>!</h2>
-    <div class="welcome">Now that you've signed in you can go to the <%= link_to 'Dashboard', dashboard_path , method: :get %>
-    <% if current_user.admin? %> and <%= link_to 'Administration', admin_control_path, method: :get %>
-    <% end %>
-    </div>
-    
-    <div class="welcome">or <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
+      <h2>Welcome back, <%= current_user.email %>!</h2>
+      <div class="welcome">Now that you've signed in you can go to the <%= link_to 'Dashboard', dashboard_path , method: :get %>
+      <% if current_user.admin? %> and <%= link_to 'Administration', admin_control_path, method: :get %><% end %>, or <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
+      </div>
     <% end %>
   </div>
 
-  <div id="footer-wrapper">
-    <div id="footer">
-      <h2>For more Megagames, visit</h2>
-      <a href="http://www.megagamesociety.com" target="_blank"><img src="/assets/logo_mgs.png" /></a>
-      <div class="social">
-        <a href="http://www.megagamesociety.com" target="_blank" class="home"></a>
-        <a href="https://twitter.com/megagamesociety" target="_blank" class="twitter"></a>
-        <a href="https://www.facebook.com/megagamesociety" target="_blank" class="facebook"></a>
-      </div>
+  <div id="footer">
+    <h2>For more Megagames, visit</h2>
+    <a href="http://www.megagamesociety.com" target="_blank"><img src="/assets/logo_mgs.png" /></a>
+    <div class="social">
+      <a href="http://www.megagamesociety.com" target="_blank" class="home"></a>
+      <a href="https://twitter.com/megagamesociety" target="_blank" class="twitter"></a>
+      <a href="https://www.facebook.com/megagamesociety" target="_blank" class="facebook"></a>
     </div>
   </div>
 </div>
