--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="actions">
-    <%= f.label :team_name %> </br>
-    <%= f.select :team_name, options_for_select(@countries, selected = @income.team_name) %> <br />
+    <%= f.label :team %> </br>
+    <%= f.select :team, options_for_select(@teams.collect{ |team| [team.team_name, team.id]}, selected = @income.team_id) %> <br />
     <%= f.label :round %> </br>
     <%= f.number_field :round, :in => 0..12, :step => '1', :value=> @round %></br>
     <%= f.label :amount %>
