--- a/app/views/public_relations/index.html.erb
+++ b/app/views/public_relations/index.html.erb
@@ -28,7 +28,7 @@
             <td><%= link_to 'Details', public_relation, :class => "button-input" %></td>
             <td><%= link_to 'Edit', edit_public_relation_path(public_relation), :class => "button-input" %></td>
             <td><%= link_to 'Destroy', public_relation, method: :delete, :class => "button-input", data: { confirm: 'Are you sure?' } %></td>
-            <td><%= public_relation.country%></td>
+            <td><%= public_relation.team.team_name %></td>
             <td><%= public_relation.source %></td>
             <td><%= public_relation.pr_amount %></td>
             <td><%= public_relation.description %></td>
