--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -12,7 +12,7 @@ $border-tan: #BEC2AD;
    ===================================== */
 
 #admin {
-  padding: 30px;
+  padding: 30px 30px 90px 30px;
 
   h1 {
     margin-bottom: 30px;
@@ -67,4 +67,25 @@ nav {
     line-height: 2.8rem;
     padding: 5px 8px;
   }
+}
+
+
+/* =====================================
+               TEAM CONTROLS
+   ===================================== */
+
+.list-of-countries {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-size: 14px;
+  justify-content: flex-start;
+  line-height: 20px;
+  text-align: center;
+  width: 100%;
+}
+
+.list-of-countries div {
+  flex: 0 0 125px;
+  margin: 5px 10px;
 }
